--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -10,7 +10,9 @@ $windowHeight: 680px
 AnthemUi
   background-color: $black
   min-width: $windowWidth
+  //max-width: $windowWidth
   min-height: $windowHeight
+  //max-height: $windowHeight
 
 QLabel
   qproperty-alignment: AlignCenter
@@ -22,7 +24,9 @@ Menubar
   $borderWidth: 3px
   $fitted: $menuHeight - 2 * $borderWidth
 
+  min-height: $menuHeight + 20
   max-height: $menuHeight + 20
+
 
   & #CopyDock
     border: $borderWidth solid $red
@@ -165,6 +169,9 @@ QComboBox
 
 QTabWidget
 
+  min-width: $windowWidth
+  //max-width: $windowWidth
+
   &::pane
     background-color: transparent
     margin: 0px
@@ -180,10 +187,13 @@ QTabWidget
     font-family: "DIN Light"
     border: none
     outline: none
-    min-width: 205px
+    min-width: $windowWidth/6
+    max-width: $windowWidth/6
     min-height: 50px
+    max-height: 50px
     padding-bottom: 0px
     padding-top: 5px
+    margin: 0px
     text-align: center
     qproperty-alignment: AlignCenter
 
@@ -204,6 +214,23 @@ OperatorUi
   border: 2px solid $black
   margin: 5px
 
+  & QPushButton
+    background-color: transparent
+    color: $black
+    font-size: 24px
+    font-family: DIN
+    qproperty-flat: true
+    outline: none
+    border: none //2px solid $black
+    padding: 14px
+    margin-top: 5px
+    margin-left: 0px
+    margin-right: 5px
+
+    &:hover, &:open
+      background-color: $black
+      color: $red
+
 ModDial
 
   background-color: transparent
@@ -213,7 +240,7 @@ ModDial
   qproperty-arcColor: $black
   qproperty-arcWidth: 3
   qproperty-arcPadding: 4
-  qproperty-valueShown: true
+  qproperty-valueShown: false
   qproperty-displayedArcColor: $white
   min-width: 120
   min-height: 120
