--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -62,7 +62,6 @@ Menubar
     background-color: $red
     min-width: 500px
     max-width: 500px
-    max-height: $menuHeight
 
     & QLabel
       color: $black
@@ -227,7 +226,7 @@ OperatorUi
     margin-left: 0px
     margin-right: 5px
 
-    &:hover, &:open
+    &:open
       background-color: $black
       color: $red
 
