--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -83,6 +83,10 @@ Menubar
 #MenuButton
   qproperty-iconWidth: 30
   qproperty-iconHeight: 30
+  min-width: 35px
+  max-width: 35px
+  min-height: 35px
+  max-height: 35px
 
 QMenu
   background-color: $red
