--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -232,8 +232,8 @@ OperatorUi
     outline: none
     border: 2px solid $black
     min-width: 40px
-    min-height: 50px
     margin-top: 5px
+    margin-bottom: 5px
 
     &:open
       background-color: $black
