--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -267,6 +267,10 @@ ModItemUi
   font-family: DIN
   font-size: 14px
 
+  & QMenu::item
+    // Don't ask me why this is necessary
+    padding-right: 30px
+
 AlgorithmUi
   background-color: transparent
   border: 2px solid $black
