--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -248,7 +248,7 @@ ModDial
   qproperty-arcColor: $black
   qproperty-arcWidth: 3
   qproperty-arcPadding: 4
-  qproperty-valueShown: true
+  qproperty-valueShown: false
   qproperty-displayedArcColor: $white
   min-width: 120
   min-height: 120
