--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -291,3 +291,14 @@ AlgorithmUi
       background-color: $black
       color: $red
 
+MasterPage
+
+  background-color: $red
+
+VolumeUi 
+
+  border: 2px solid $black
+  margin: 5px
+
+
+
