Added ramp wavetables with more partials

--- a/ui/rsc-ui/style/style.css
+++ b/ui/rsc-ui/style/style.css
@@ -82,7 +82,7 @@ QMenu {
 CustomComboBox QMenu {
   margin: 0px; }
   CustomComboBox QMenu::item {
-    padding: 0; }
+    padding: 40px; }
 
 QDialog, SettingsDialog {
   background-color: #DC4850; }
@@ -241,5 +241,12 @@ AlgorithmUi {
     AlgorithmUi QLabel:enabled {
       background-color: #27272B;
       color: #DC4850; }
+
+MasterPage {
+  background-color: #DC4850; }
+
+VolumeUi {
+  border: 2px solid #27272B;
+  margin: 5px; }
 
 /*# sourceMappingURL=style.css.map */
